--- a/svelte/package.json
+++ b/svelte/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2",
+    "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
@@ -17,8 +19,7 @@
   "scripts": {
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild",
-    "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "rocket:start": "cd .. && cargo run",
+    "dev": "run-p autobuild rocket:start"
   }
 }
