--- a/svelte/package.json
+++ b/svelte/package.json
@@ -2,9 +2,6 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2",
-    "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
@@ -14,7 +11,9 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2",
+    "prettier-plugin-svelte": "^0.7.0"
   },
   "scripts": {
     "build": "rollup -c",
