--- a/svelte/package.json
+++ b/svelte/package.json
@@ -11,6 +11,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "prettier-plugin-svelte": "^0.7.0"
@@ -19,6 +20,7 @@
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
     "rocket:start": "cd .. && cargo run",
+    "pg:start": "docker start diesel-pg",
     "dev": "run-p autobuild rocket:start"
   }
 }
