--- a/svelte/package.json
+++ b/svelte/package.json
@@ -2,6 +2,10 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-plugin-svelte3": "^2.7.3",
+    "prettier": "^1.19.1",
+    "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
@@ -12,9 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2",
-    "prettier-plugin-svelte": "^0.7.0"
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "build": "rollup -c",
