don't know, need to backup!

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:password@localhost:5432/diesel
+ROCKET_DATABASES='{my_db={url="postgres://postgres:password@localhost:5432/diesel"}}'
